fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
   font-family: 'Nunito', sans-serif;
   background-color: #2e2b38;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 header {
@@ -391,8 +391,16 @@ main {
   display: flex;
 }
 
+.work-header {
+  margin: 0;
+  
+  display: grid;
+  grid-template-columns: 3(1fr);
+}
+
 .worksNav {
   align-self: flex-end;
+  grid-column: 3/4;
   margin-top: 5em;
   margin-right: 3em;
 }
